--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <h1>Where I'm From</h1>
       <p>I'm from Blue Springs, MO</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Coding and stuff</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Math teacher</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Blue springs, MO</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To get a job!</p>
     </section>
 
     <footer id="footer">
